--- a/views/list.ejs
+++ b/views/list.ejs
@@ -13,16 +13,20 @@
   </div>
 
   <div class="box">
-    <% for(var i=0; i<newListItem.length; i++){ %>
+    <% newListItem.forEach(function(listItem){ %>
+    <form action="/delete" method="post">
+
     <div class="item">
-      <input type="checkbox">
-      <p> <%= newListItem[i] %></p>
+      <input type="checkbox" onChange="this.form.submit()" name="checkbox" value="<%= listItem._id %>">
+      <p> <%= listItem.name %></p>
     </div>
-    <% } %>
+    <input type="hidden" name="listName" value="<%= listTitle %>">
+  </form>
+    <% }); %>
 
     <form action="/" method="post" class="item">
       <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-      <button type="submit" name="button">+</button>
+      <button type="submit" name="list" value="<%= listTitle %>">+</button>
     </form>
 
   </div>
